src/test/ui/impl-trait/multiple-lifetimes/error-handling.stderr
warning: lifetime parameter `'a` never used
  --> $DIR/error-handling.rs:11:8
   |
LL | type E<'a, 'b> = impl Sized;
   |        ^^
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'b` never used
  --> $DIR/error-handling.rs:11:12
   |
LL | type E<'a, 'b> = impl Sized;
   |            ^^

error: lifetime may not live long enough
  --> $DIR/error-handling.rs:13:56
   |
LL | fn foo<'a, 'b, 'c>(x: &'static i32, mut y: &'a i32) -> E<'b, 'c> {
   |        -- lifetime `'a` defined here                   ^^^^^^^^^ opaque type requires that `'a` must outlive `'static`
help: to allow this `impl Trait` to capture borrowed data with lifetime `'a`, add `'a` as a constraint
   |
LL | type E<'a, 'b> = impl Sized; + 'a
   |

error: aborting due to previous error

